--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,41 +1,49 @@
-# Application Name (optional)
+# ----------------------------
+#  Application Configuration
+# ----------------------------
 spring.application.name=JijamataCollegeProject
-# Server Port (default: 8083)
-server.port=80
+server.port=8080  # Render ke liye default 8080 hi use kar (80 nahi)
 
-# Database Configuration (MySQL example)
-spring.datasource.url=jdbc:mysql://localhost:3306/college
-spring.datasource.username=root
-spring.datasource.password=root
+# ----------------------------
+#  Database Configuration (Render MySQL or any cloud DB)
+# ----------------------------
+# \uD83D\uDC49 Is URL ko apne Render Database ke credentials se replace karna hai
+spring.datasource.url=jdbc:mysql://your-db-host.render.com:3306/college?useSSL=false&allowPublicKeyRetrieval=true
+spring.datasource.username=your-db-username
+spring.datasource.password=your-db-password
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-# Hibernate / JPA Configuration
+# ----------------------------
+#  Hibernate / JPA Configuration
+# ----------------------------
 spring.jpa.hibernate.ddl-auto=update
-# options: none | validate | update | create | create-drop
-
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.show-sql=true
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
-
-
-# Hibernate Dialect (choose based on DB)
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
-# Actuator endpoints enable
-management.endpoints.web.exposure.include=*
-management.endpoint.health.show-details=always
 
-#jdbc use ki hai na tho spring_session ko banana padata hai tho is vali line se atomatically spring_session table generate hota hai
+# ----------------------------
+#  Session Management
+# ----------------------------
 spring.session.jdbc.initialize-schema=always
 
-# JSP View Resolver
-# -------------------------
+# ----------------------------
+#  View Resolver (JSP)
+# ----------------------------
 spring.mvc.view.prefix=/WEB-INF/views/
 spring.mvc.view.suffix=.jsp
 spring.servlet.multipart.enabled=true
 
-# Gmail SMTP Settings
+# ----------------------------
+#  File Upload Limits
+# ----------------------------
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
+
+# ----------------------------
+#  Email Configuration (Gmail SMTP)
+# ----------------------------
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=karanwaghachoure95@gmail.com
@@ -43,12 +51,15 @@ spring.mail.password=jldarwszchovamzf
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
-# Maximum file size for upload
-spring.servlet.multipart.max-file-size=10MB
-spring.servlet.multipart.max-request-size=10MB
-
-
-# Force InnoDB settings (indirectly)
+# ----------------------------
+#  HikariCP Performance Settings
+# ----------------------------
 spring.jpa.properties.hibernate.hikari.dataSourceProperties.cachePrepStmts=true
 spring.jpa.properties.hibernate.hikari.dataSourceProperties.prepStmtCacheSize=250
 spring.jpa.properties.hibernate.hikari.dataSourceProperties.prepStmtCacheSqlLimit=2048
+
+# ----------------------------
+#  Actuator (optional monitoring)
+# ----------------------------
+management.endpoints.web.exposure.include=*
+management.endpoint.health.show-details=always
