--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,65 +1,58 @@
-# ----------------------------
-#  Application Configuration
-# ----------------------------
+# ===============================
+# \u2705 Application Info
+# ===============================
 spring.application.name=JijamataCollegeProject
-server.port=8080  # Render ke liye default 8080 hi use kar (80 nahi)
+# Render auto port detect karta hai, manually mat fix kar
+server.port=${PORT:8080}
 
-# ----------------------------
-#  Database Configuration (Render MySQL or any cloud DB)
-# ----------------------------
-# \uD83D\uDC49 Is URL ko apne Render Database ke credentials se replace karna hai
-spring.datasource.url=jdbc:mysql://your-db-host.render.com:3306/college?useSSL=false&allowPublicKeyRetrieval=true
-spring.datasource.username=your-db-username
-spring.datasource.password=your-db-password
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+# ===============================
+# \u2705 Database Configuration (PostgreSQL)
+# ===============================
+spring.datasource.url=jdbc:postgresql://dpg-d42uu6s9c44c73armhvg-a.oregon-postgres.render.com:5432/college_40y4
+spring.datasource.username=karan
+spring.datasource.password=dlQ5cpaZUlVRFzteOTi0tSUCBIjGnetF
+spring.datasource.driver-class-name=org.postgresql.Driver
 
-# ----------------------------
-#  Hibernate / JPA Configuration
-# ----------------------------
+# ===============================
+# \u2705 Hibernate / JPA Configuration
+# ===============================
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
-# ----------------------------
-#  Session Management
-# ----------------------------
+# ===============================
+# \u2705 Actuator Endpoints
+# ===============================
+management.endpoints.web.exposure.include=*
+management.endpoint.health.show-details=always
+
+# ===============================
+# \u2705 Session JDBC (auto table creation)
+# ===============================
 spring.session.jdbc.initialize-schema=always
 
-# ----------------------------
-#  View Resolver (JSP)
-# ----------------------------
+# ===============================
+# \u2705 JSP View Resolver
+# ===============================
 spring.mvc.view.prefix=/WEB-INF/views/
 spring.mvc.view.suffix=.jsp
-spring.servlet.multipart.enabled=true
 
-# ----------------------------
-#  File Upload Limits
-# ----------------------------
+# ===============================
+# \u2705 File Upload Configuration
+# ===============================
+spring.servlet.multipart.enabled=true
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
 
-# ----------------------------
-#  Email Configuration (Gmail SMTP)
-# ----------------------------
+# ===============================
+# \u2705 Gmail SMTP Settings
+# ===============================
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=karanwaghachoure95@gmail.com
 spring.mail.password=jldarwszchovamzf
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
-
-# ----------------------------
-#  HikariCP Performance Settings
-# ----------------------------
-spring.jpa.properties.hibernate.hikari.dataSourceProperties.cachePrepStmts=true
-spring.jpa.properties.hibernate.hikari.dataSourceProperties.prepStmtCacheSize=250
-spring.jpa.properties.hibernate.hikari.dataSourceProperties.prepStmtCacheSqlLimit=2048
-
-# ----------------------------
-#  Actuator (optional monitoring)
-# ----------------------------
-management.endpoints.web.exposure.include=*
-management.endpoint.health.show-details=always
