--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,9 +8,9 @@ server.port=${PORT:8080}
 # ===============================
 # \u2705 Database Configuration (PostgreSQL)
 # ===============================
-spring.datasource.url=jdbc:postgresql://dpg-d42uu6s9c44c73armhvg-a.oregon-postgres.render.com:5432/college_40y4
+spring.datasource.url=jdbc:postgresql://dpg-d42vrb8dl3ps73crf42g-a.oregon-postgres.render.com:5432/college_1ody
 spring.datasource.username=karan
-spring.datasource.password=dlQ5cpaZUlVRFzteOTi0tSUCBIjGnetF
+spring.datasource.password=CtD41LJnwtyrxcGltmwzC7QK4aWMWX7g
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # ===============================
